2.10.10:

2007-04-30  Johannes Schmid <johannes.schmid@openismus.com>

	* gtk/src/combo.hg:
	* gtk/src/fileselection.hg:
	* gtk/src/optionmenu.hg:
	* gtk/src/progress.hg:

	Use _IS_DEPRECATED instead of _DEPRECATED to sync with
	glibmm HEAD.

2007-04-24  Yselkowitz <yselkowitz@users.sourceforge.net>

        * scripts/macros.m4: Check for both m4 and M4 in the GNU m4 output,
        to fix the build on some platforms.
        Bug #423990

2007-04-18  Armin Burgmeier  <armin@openismus.com>

	* gtk/src/recentmanager.hg:
	* gtk/src/recentmanager.ccg: Made a std::vector<Glib::ustring> out of
	the StringArrayHandle in Gtk::RecentManager::Data because the latter
	is not instantiable and only meant to be used as an intermediate type.

	Also hand-code RecentManager::add_item(const Glib::ustring&, const
	Data&) because we cannot do an easy conversion. We have to fill in a C
	struct instead.
	Bug #388086 (Grant Patterson)

2007-04-12  Armin Burgmeier  <armin@openismus.com>

	* tools/m4/convert_gtk.m4: Removed GtkRadioAction* ->
	Glib::RefPtr<RadioAction> conversion.

	* gtk/src/radioaction.hg: Added a custom conversion from
	GtkRadioAction* to Glib::RefPtr<RadioAction> that increases the
	reference count for the radio action object. The only place where this
	conversion actually is required is the changed signal of the radio
	action, and we need an additional reference there.
	Bug #350734 (Johnathon Jongsma, "pjdavis" Paul Davis)

2007-04-12  Johannes Schmid <johannes.schmid@openismus.com>

	* gtk/src/widget.ccg:
	Added a special case for Gtk::Menu in
	Widget_Class::dispose_vfunc_callback to fix a crash in menu
	destruction.
	Bug #339791 ("pjdavis" Paul Davis, Andrew E. Makeev)

2007-04-14  Marko Anastasov <marko@marko.anastasov.name>

	* docs/FAQ/gtkmm-faq.xml: Emphasised that the use libglademm is
	preferred over glademm. Bug #429043.
	Removed the old libglademm URL entity.

2.10.9:

2007-03-30  Murray Cumming  <murrayc@murrayc.com>
